--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,20 +1,23 @@
-click @ file:///tmp/build/80754af9/click_1646038465422/work
-coloredlogs @ file:///home/conda/feedstock_root/build_artifacts/coloredlogs_1643220139154/work
-Flask @ file:///croot/flask_1671217343254/work
-Flask-Cors @ file:///tmp/build/80754af9/flask-cors_1609957731919/work
-flatbuffers @ file:///home/conda/feedstock_root/build_artifacts/python-flatbuffers_1685164110706/work
-humanfriendly @ file:///home/conda/feedstock_root/build_artifacts/humanfriendly_1696713070881/work
-importlib-metadata @ file:///croot/importlib-metadata_1678997070253/work
-itsdangerous @ file:///tmp/build/80754af9/itsdangerous_1621432558163/work
-Jinja2 @ file:///croot/jinja2_1666908132255/work
-MarkupSafe @ file:///opt/conda/conda-bld/markupsafe_1654597864307/work
-mpmath @ file:///home/conda/feedstock_root/build_artifacts/mpmath_1678228039184/work
-numpy @ file:///home/conda/feedstock_root/build_artifacts/numpy_1651020413938/work
-onnxruntime @ file:///croot/onnxruntime_1689679117497/work/onnxruntime-1.15.1-py3-none-any.whl#sha256=a96ec3c161b298ab7acc87d8236c9c6db074ce8cbb2c71132193eca13a22af28
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1696202382185/work
-Pillow @ file:///croot/pillow_1696580024257/work
+click==8.0.4
+coloredlogs==15.0.1
+Flask==2.2.2
+Flask-Cors==3.0.10
+flatbuffers==23.5.26
+humanfriendly==10.0
+importlib-metadata==6.0.0
+itsdangerous==2.0.1
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+mpmath==1.3.0
+numpy==1.22.3
+onnxruntime==1.15.1
+packaging==23.2
+Pillow==10.0.1
+pip==23.2.1
 protobuf==3.15.8
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
-sympy @ file:///home/conda/feedstock_root/build_artifacts/sympy_1684180539862/work
-Werkzeug @ file:///croot/werkzeug_1679489717957/work
-zipp @ file:///croot/zipp_1672387121353/work
+setuptools==68.0.0
+six==1.16.0
+sympy==1.12
+Werkzeug==2.2.3
+wheel==0.41.2
+zipp==3.11.0
